# Comp_Code_Team6

./: .gitignore  IMPLEMENTATION_NOTES_CLOSE_RANGE_VISION.md  README.md  ROBUSTNESS_IMPROVEMENTS.md  requirements_jetson.txt
.claude/: settings.json
Arduino Code/: EncoderDebug.ino  VScode-Wheels-plotter.ino  VScode-Wheels.ino
docs/: architecture.dot  architecture.drawio  architecture.json  dot_to_drawio.py  foxglove_getting_started.md  setting_up_local_inference.md
foxglove_files/: wskr.wskr-panels-0.1.2.foxe
src/arduino/arduino/: mecanum_serial_bridge.py
src/system_manager_package/src/: search_supervisor.py  state_manager.py
src/system_manager_package/system_manager_package/: constants.py
src/utilities/: package.xml
src/utilities/foxglove_extensions/wskr_panels/: package.json
src/utilities/foxglove_extensions/wskr_panels/src/: GraspPanel.tsx  ToyApproachPanel.tsx  index.ts
src/utilities/utilities/: wskr_foxglove_approach_bridge.py
src/vision_processing_package/launch/: vision_processing.launch.py
src/vision_processing_package/models/: daedalus.engine.meta.json  pt_to_engine.py  weights.engine.meta.json  weights.engine.meta_old.json
src/vision_processing_package/src/: bbox_to_xyz_service.py  bbox_to_xyz_service_2D.py  gst_cam_node.py  object_selection.py  process_object_vision.py
src/wskr/: setup.py
src/wskr/config/: everything_is_floor.yaml  floor_params.yaml  your_Whisker_Calibration.json  your_floor_params.yaml  your_lens_params.yaml
src/wskr/launch/: wskr.launch.py
src/wskr/wskr/: approach_action_server.py  dead_reckoning_node.py  (+2 more)
(+7 files in other folders)
